--- a/main.css
+++ b/main.css
@@ -4,3 +4,11 @@
 #red-text{
     color: red;
 }
+p{
+    font-family: poppins;
+}
+#blog-title{
+    color: hotpink;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+}
